src/objects/MortgageExpert__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Mortgage Expert for Community Users</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mobile_del__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <label>User ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfAddress__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>acfEmail__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>acfFax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>acfOperating_Day_From__c</fullName>
        <label>Operating Day From</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfOperating_Day_To__c</fullName>
        <label>Operating Day To</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfOperating_Time_From__c</fullName>
        <label>Operating Time From</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfOperating_Time_To__c</fullName>
        <label>Operating Time To</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>MortgageExpert</label>
</CustomObject>